Добавил грид сетку в навигацию

--- a/index.html
+++ b/index.html
@@ -18,14 +18,45 @@
             <span class="line"></span>
           </label>
           <ul class="nav__lists">
-            <li class="nav__list"><a href="#" class="nav__link">Для неё</a></li>
-            <li class="nav__list">
-              <a href="#" class="nav__link">Для него</a>
+            <li class="nav__list nav__list--1">
+              <a href="#" class="nav__link link"
+                ><img class="link__image" src="./image/menu/woman.png" alt="woman" /><h2 class="link__title">Для неё</h3> 
+                </a
+              >
             </li>
-            <li class="nav__list"><a href="#" class="nav__link">Дети</a></li>
-            <li class="nav__list"><a href="#" class="nav__link">Новинки</a></li>
-            <li class="nav__list"><a href="#" class="nav__link">SALE</a></li>
-            <li class="nav__list"><a href="#" class="nav__link">Beauty</a></li>
+            <li class="nav__list nav__list--2">
+              <a href="#" class="nav__link"
+                ><img class="link__image" src="./image/menu/men.png" alt="man" /><h2 class="link__title">Для него</h2> </a
+              >
+            </li>
+            <li class="nav__list nav__list--3">
+              <a href="#" class="nav__link"
+                ><img class="link__image" src="./image/menu/child.png" alt="child" /> <h2 class="link__title">Дети</h2></a
+              >
+            </li>
+            <li class="nav__list nav__list--4">
+              <a href="#" class="nav__link"
+                ><img class="link__image" src="./image/menu/new.png" alt="new" /><h2 class="link__title">Новинки</h2> </a
+              >
+            </li>
+            <li class="nav__list nav__list--5">
+              <a href="#" class="nav__link"
+                ><img class="link__image" src="./image/menu/sale.png" alt="" /><h2 class="link__title">SALE</h2> </a
+              >
+            </li>
+            <li class="nav__list nav__list--6">
+              <a href="#" class="nav__link"
+                ><img class="link__image" src="./image/menu/beauty.png" alt="beauty" /><h2 class="link__title">Beauty</h2> </a
+              >
+            </li>
+            <li class="nav__gallery nav__list--7">
+              <div class="gallery">
+                <img src="./image/menu_galery/image-1.jpeg" alt="" />
+                <img src="./image/menu_galery/image-2.jpeg" alt="" />
+                <img src="./image/menu_galery/image-3.jpeg" alt="" />
+                <img src="./image/menu_galery/image-4.jpeg" alt="" />
+              </div>
+            </li>
           </ul>
         </nav>
       </div>
