выровнял блоки в навигации

--- a/index.html
+++ b/index.html
@@ -20,41 +20,79 @@
           <ul class="nav__lists">
             <li class="nav__list nav__list--1">
               <a href="#" class="nav__link link"
-                ><img class="link__image" src="./image/menu/woman.png" alt="woman" /><h2 class="link__title">Для неё</h3> 
-                </a
-              >
+                ><img
+                  class="link__image"
+                  src="./image/menu/woman.png"
+                  alt="woman"
+                /><span class="link__title">Для неё</span>
+              </a>
             </li>
             <li class="nav__list nav__list--2">
               <a href="#" class="nav__link"
-                ><img class="link__image" src="./image/menu/men.png" alt="man" /><h2 class="link__title">Для него</h2> </a
-              >
+                ><img
+                  class="link__image"
+                  src="./image/menu/men.png"
+                  alt="man"
+                /><span class="link__title">Для него</span>
+              </a>
             </li>
             <li class="nav__list nav__list--3">
               <a href="#" class="nav__link"
-                ><img class="link__image" src="./image/menu/child.png" alt="child" /> <h2 class="link__title">Дети</h2></a
+                ><img
+                  class="link__image"
+                  src="./image/menu/child.png"
+                  alt="child"
+                />
+                <span class="link__title">Дети</span></a
               >
             </li>
             <li class="nav__list nav__list--4">
               <a href="#" class="nav__link"
-                ><img class="link__image" src="./image/menu/new.png" alt="new" /><h2 class="link__title">Новинки</h2> </a
-              >
+                ><img
+                  class="link__image"
+                  src="./image/menu/new.png"
+                  alt="new"
+                /><span class="link__title">Новинки</span>
+              </a>
             </li>
             <li class="nav__list nav__list--5">
               <a href="#" class="nav__link"
-                ><img class="link__image" src="./image/menu/sale.png" alt="" /><h2 class="link__title">SALE</h2> </a
-              >
+                ><img class="link__image" src="./image/menu/sale.png" alt="" />
+                <span class="link__title">SALE</span>
+              </a>
             </li>
             <li class="nav__list nav__list--6">
               <a href="#" class="nav__link"
-                ><img class="link__image" src="./image/menu/beauty.png" alt="beauty" /><h2 class="link__title">Beauty</h2> </a
-              >
+                ><img
+                  class="link__image"
+                  src="./image/menu/beauty.png"
+                  alt="beauty"
+                />
+                <span class="link__title">Beauty</span>
+              </a>
             </li>
             <li class="nav__gallery nav__list--7">
               <div class="gallery">
-                <img src="./image/menu_galery/image-1.jpeg" alt="" />
-                <img src="./image/menu_galery/image-2.jpeg" alt="" />
-                <img src="./image/menu_galery/image-3.jpeg" alt="" />
-                <img src="./image/menu_galery/image-4.jpeg" alt="" />
+                <img
+                  class="gallery__img"
+                  src="./image/menu_galery/image-1.jpeg"
+                  alt="photo"
+                />
+                <img
+                  class="gallery__img"
+                  src="./image/menu_galery/image-2.jpeg"
+                  alt="photo"
+                />
+                <img
+                  class="gallery__img"
+                  src="./image/menu_galery/image-3.jpeg"
+                  alt="photo"
+                />
+                <img
+                  class="gallery__img"
+                  src="./image/menu_galery/image-4.jpeg"
+                  alt="photo"
+                />
               </div>
             </li>
           </ul>
